@@ -78,7 +78,7 @@ static const R_ExternalMethodDef ExtEntries[] = {
     EXTDEF(Rprofmem, 3),
 
     EXTDEF(countfields, 6),
-    EXTDEF(readtablehead, 6),
+    EXTDEF(readtablehead, 7),
     EXTDEF(typeconvert, 4),
     EXTDEF(writetable, 11),
 
